Made Dockerfile for debian-based OS, edited Dockerfile for alpine

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,9 +1,7 @@
-FROM python:3-alpine
+FROM python:3-bullseye
 
 WORKDIR root
 
-RUN apk add --no-cache --virtual .build-deps \
-    gcc libc-dev linux-headers
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
