--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,14 +1,14 @@
 FROM python:3-bullseye
 
-WORKDIR root
+WORKDIR /root
 
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
-COPY app.py wsgi.py .
+COPY app.py wsgi.py ./
 
 COPY templates ./templates
 
-CMD uwsgi --socket 0.0.0.0:5000 --protocol=http -w wsgi:app
+CMD [ "sh", "-c", "uwsgi --socket 0.0.0.0:5000 --protocol=http -w wsgi:app"]
 
